--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -288,6 +288,41 @@
         );
     }
 
+    .linear-mask-frame {
+        mask-image: linear-gradient(
+                to bottom,
+                transparent,
+                transparent 2%,
+                black 5%,
+                black 95%,
+                transparent 98%
+            ),
+            linear-gradient(
+                to left,
+                transparent,
+                transparent 2%,
+                black 5%,
+                black 95%,
+                transparent 98%
+            );
+        -webkit-mask-image: linear-gradient(
+                to bottom,
+                transparent,
+                transparent 2%,
+                black 5%,
+                black 95%,
+                transparent 98%
+            ),
+            linear-gradient(
+                to left,
+                transparent,
+                transparent 2%,
+                black 5%,
+                black 95%,
+                transparent 98%
+            );
+    }
+
     .radial-mask {
         mask-image: radial-gradient(
             black 0%,
