--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -228,41 +228,6 @@
         );
     }
 
-    .linear-mask-frame {
-        mask-image: linear-gradient(
-                to bottom,
-                transparent,
-                transparent 2%,
-                black 5%,
-                black 95%,
-                transparent 98%
-            ),
-            linear-gradient(
-                to left,
-                transparent,
-                transparent 2%,
-                black 5%,
-                black 95%,
-                transparent 98%
-            );
-        -webkit-mask-image: linear-gradient(
-                to bottom,
-                transparent,
-                transparent 2%,
-                black 5%,
-                black 95%,
-                transparent 98%
-            ),
-            linear-gradient(
-                to left,
-                transparent,
-                transparent 2%,
-                black 5%,
-                black 95%,
-                transparent 98%
-            );
-    }
-
     .radial-mask {
         mask-image: radial-gradient(
             black 0%,
@@ -276,57 +241,6 @@
             transparent 70%,
             transparent 100%
         );
-    }
-    .photo-mask {
-        mask-image: radial-gradient(
-            black 0%,
-            black 85%,
-            transparent 90%,
-            transparent 100%
-        );
-        -webkit-mask-image: radial-gradient(
-                circle 4rem at 3rem calc(100% - 3rem),
-                black 0%,
-                black 50%,
-                transparent 80%,
-                transparent 100%
-            ),
-            radial-gradient(
-                circle 4rem at 3rem 3rem,
-                black 0%,
-                black 50%,
-                transparent 80%,
-                transparent 100%
-            ),
-            radial-gradient(
-                circle 4rem at calc(100% - 3rem) 3rem,
-                black 0%,
-                black 50%,
-                transparent 80%,
-                transparent 100%
-            ),
-            radial-gradient(
-                circle 4rem at calc(100% - 3rem)
-                    calc(100% - 3rem),
-                black 0%,
-                black 50%,
-                transparent 80%,
-                transparent 100%
-            ),
-            radial-gradient(
-                ellipse 80% 55% at 50% 50%,
-                black 0%,
-                black 90%,
-                transparent 95%,
-                transparent 100%
-            ),
-            radial-gradient(
-                ellipse 60% 75% at 50% 50%,
-                black 0%,
-                black 90%,
-                transparent 95%,
-                transparent 100%
-            );
     }
 
     .hero-image-mask-1-wrap {
@@ -385,6 +299,10 @@
         clip-path: url(#clip-blob);
     }
 
+    .waves {
+        clip-path: url(#clip-waves);
+    }
+
     .linear-mask {
         mask-image: linear-gradient(
             to left,
@@ -408,6 +326,18 @@
             transparent 50%,
             black 80%
         );
+    }
+    .clip-poly-right {
+        clip-path: polygon(
+            25% 0%,
+            100% 0%,
+            75% 100%,
+            0% 100%
+        );
+    }
+
+    .clip-poly-left {
+        clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
     }
     @media speech {
         .content-after::after {
