--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,10 @@
 @layer utilities {
     /* UI */
 
+    .title-bg {
+        background-image: url("/images/bg/r/26/1024.webp");
+    }
+
     .filter-noise {
         filter: url(#noise);
     }
