add magnifier touch events

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,10 +73,10 @@
     }
 
     /* custom scrollbar */
-
+    /* 
     body {
         scrollbar-gutter: stable both-edges;
-    }
+    } */
 
     ::-webkit-scrollbar {
         width: min(0.5rem, 0.5vw);
