--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,10 +134,18 @@
     }
 
     .link {
-        @apply relative  [&:is(:hover,:focus)]:after:right-0;
+        @apply relative  [&:is(:hover,:focus-visible,:active)]:after:right-0;
     }
     .link::after {
-        @apply absolute -bottom-2 left-0 right-full top-0 bg-transparent bg-gradient-to-r from-transparent via-primary-500 to-transparent bg-[size:100%_4px] bg-bottom bg-no-repeat transition-all duration-500 content-[""] dark:via-tertiary-400;
+        @apply absolute -bottom-1 left-0 right-full top-0 bg-transparent bg-gradient-to-r from-transparent via-primary-500 to-transparent bg-[size:100%_4px] bg-bottom bg-no-repeat transition-all duration-500 content-[""] dark:via-tertiary-400;
+    }
+
+    .link-accordion {
+        @apply relative  [&:is(:hover,:focus-visible)>div:first-child]:after:right-0;
+    }
+
+    .link-accordion > div:first-child::after {
+        @apply absolute -bottom-1 left-0 right-full top-0 bg-transparent bg-gradient-to-r from-transparent via-primary-500 to-transparent bg-[size:100%_4px] bg-bottom bg-no-repeat transition-all duration-500 content-[""] dark:via-tertiary-400;
     }
 
     /* Spicy */
